Completed neovim configuration.

--- a/tmux_config/tmux.conf
+++ b/tmux_config/tmux.conf
@@ -5,6 +5,9 @@
 
 # LOOK INTO TMUXLINE
 
+# Set Terminal
+set-option -g default-terminal 'screen-256color'
+
 # Remap the Prefix to Ctrl+a
 set -g prefix C-a
 unbind C-b
@@ -42,6 +45,7 @@ bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 set-option -g renumber-windows on
 
+# Status Line
 set -g status on
 set -g status-interval 1
 set -g status-fg colour231
