Organised .tmux.conf.

--- a/tmux_config/tmux.conf
+++ b/tmux_config/tmux.conf
@@ -3,8 +3,6 @@
 #    scripting action, shamelessly borrowed from:
 #    https://github.com/gpakosz/.tmux/blob/master/.tmux.conf
 
-# LOOK INTO TMUXLINE
-
 # Set Terminal
 set-option -g default-terminal 'screen-256color'
 
@@ -13,7 +11,8 @@ set -g prefix C-a
 unbind C-b
 
 # Environment Variable Updates
-set-option -g update-environment 'SS_CLIENT SSH_CONNECTION DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID XAUTHORITY'
+set-option -g update-environment 'SS_CLIENT SSH_CONNECTION DISPLAY SSH_ASKPASS \
+    SSH_AUTH_SOCK SSH_AGENT_PID XAUTHORITY'
 
 # Rebind Zoom away from Suspend
 unbind z
@@ -26,14 +25,12 @@ unbind [
 unbind ]
 bind Escape copy-mode #<prefix> Esc now enters copy mode
 unbind p
-bind p run-shell "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+bind p run-shell "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux \
+    paste-buffer"
 bind -Tcopy-mode-vi 'v' send -X begin-selection
 bind -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -in -selection clipboard"
 bind-key -Tcopy-mode-vi Escape send -X cancel
 bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
-# Old Vim-Like Copy/Paste Bindings. Deprecated in Newer Tmux
-#bind-key -t vi-copy 'v' begin-selection # v starts selection
-#bind-key -t vi-copy 'y' copy-pipe "xclip -in -selection clipboard" # yanks selection to tmux clipboard and xclip
 
 # Window Navigation
 bind-key -n C-Pagedown next-window
@@ -51,11 +48,16 @@ set -g status-interval 1
 set -g status-fg colour231
 set -g status-bg colour234
 set -g status-left-length 20
-set -g status-left '#{?client_prefix,#[fg=colour254]#[bg=colour31]#[bold],#[fg=colour16]#[bg=colour254]#[bold]} #S #{?client_prefix,#[fg=colour31]#[bg=colour235]#[nobold],#[fg=colour254]#[bg=colour235]#[nobold]}'
+set -g status-left '#{?client_prefix,#[fg=colour254]#[bg=colour31]#[bold],\
+#[fg=colour16]#[bg=colour254]#[bold]} #S #{?client_prefix,#[fg=colour31]\
+#[bg=colour235]#[nobold],#[fg=colour254]#[bg=colour235]#[nobold]}'
 set -g status-right '#(eval cut -c3- ~/.tmux.conf | sh -s status_right) #U@#H '
 set -g status-right-length 150
-set -g window-status-format "#[fg=colour244,bg=colour235] #I #[fg=colour31,bg=colour235] #[fg=colour31,bg=colour235]#W "
-set -g window-status-current-format "#[fg=colour235,bg=colour31]#[fg=white,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour235,nobold]"
+set -g window-status-format "#[fg=colour244,bg=colour235] #I \
+#[fg=colour31,bg=colour235] #[fg=colour31,bg=colour235]#W "
+set -g window-status-current-format "#[fg=colour235,bg=colour31]\
+#[fg=white,bg=colour31] #I  #[fg=colour231,bold]#W \
+#[fg=colour31,bg=colour235,nobold]"
 set -g window-status-last-style fg=colour31
 set-window-option -g window-status-fg colour249
 set-window-option -g window-status-activity-attr none
@@ -88,7 +90,8 @@ set -g visual-activity on
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator (got to install this)
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+is_vim='echo "#{pane_current_command}" \
+    | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
@@ -107,7 +110,8 @@ set -g pane-border-fg colour238
 set -g pane-active-border-bg colour235
 set -g pane-active-border-fg colour51
 
-# Vim Style Pane Selection (useful for when tmux-navigator glitches, no conflict)
+# Vim Style Pane Selection (useful for when tmux-navigator glitches, no
+# conflict)
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -194,7 +198,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-bash-history 'off'
-set -g @resurrect-processes 'vi vim nvim emacs man less more tail top irssi mutt ssh psql mysql'
+set -g @resurrect-processes 'vi vim nvim emacs man less more tail top irssi \
+    mutt ssh psql mysql'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @continuum-restore 'on'
