Fixed yanking in tmux.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,10 +27,11 @@ bind Escape copy-mode #<prefix> Esc now enters copy mode
 unbind p
 bind p run-shell "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux \
     paste-buffer"
-bind -Tcopy-mode-vi 'v' send -X begin-selection
-bind -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -in -selection clipboard"
-bind-key -Tcopy-mode-vi Escape send -X cancel
-bind-key -Tcopy-mode-vi 'V' send -X rectangle-toggle
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi Escape send -X cancel
+bind-key -T copy-mode-vi 'V' send -X rectangle-toggle
+bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel \
+    'xclip -in -selection clipboard'
 
 # Window Navigation
 bind-key -n C-Pagedown next-window
