Add additional binding to nvimrc.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,13 +25,13 @@ unbind [
 unbind ]
 bind Escape copy-mode #<prefix> Esc now enters copy mode
 unbind p
-bind p run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"; tmux \
+bind p run-shell "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux \
     paste-buffer"
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi Escape send -X cancel
 bind-key -T copy-mode-vi 'V' send -X rectangle-toggle
 bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel \
-    'xclip -i -selection primary'
+    'xclip -i -selection clipboard'
 
 # Window Navigation
 bind-key -n C-Pagedown next-window
