--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,11 @@
 {
     "languageserver": {
+      "bash": {
+        "command": "bash-language-server",
+        "args": ["start"],
+        "filetypes": ["sh"],
+        "ignoredRootPaths": ["~"]
+      },
       "ccls": {
         "command": "ccls",
         "filetypes": ["c", "cpp", "objc", "objcpp"],
