Make dotfiles platform aware

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,13 +25,12 @@ unbind [
 unbind ]
 bind Escape copy-mode #<prefix> Esc now enters copy mode
 unbind p
-bind p run-shell "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux \
-    paste-buffer"
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi Escape send -X cancel
 bind-key -T copy-mode-vi 'V' send -X rectangle-toggle
-bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel \
-    'xclip -i -selection clipboard'
+
+# Platform-Specific Config
+if-shell "uname | grep -q Darwin" "source-file ~/.dotfiles/tmux/macos.conf" "source-file ~/.dotfiles/tmux/linux.conf"
 
 # Window Navigation
 bind-key -n C-Pagedown next-window
@@ -63,10 +62,6 @@ set -g window-status-last-style fg=colour31
 
 # Mouse Control
 set -g mouse off
-
-# Toggle mouse mode on or off
-bind m set -g mode-mouse on \; display 'Mouse: ON'
-bind M set -g mode-mouse off \; display 'Mouse: OFF'
 
 # Enable Focus Events
 set -g focus-events on
