Update configuration for MacOS

--- a/tmux/macos.conf
+++ b/tmux/macos.conf
@@ -1,5 +1,8 @@
 # vim: set syntax=tmux:
 
-bind-key -Tcopy-mode-vi Y send -X copy-pipe "pbcopy"
-bind-key P run "pbpaste | tmux load-buffer - && tmux paste-buffer"
+bind-key -Tcopy-mode-vi y send -X copy-pipe "pbcopy"
+bind-key p run "pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+# Make sure it sets the terminal colour configuration properly
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
