--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 #    https://github.com/gpakosz/.tmux/blob/master/.tmux.conf
 
 # Set Terminal
-set-option -g default-terminal 'tmux-256color'
+set-option -g default-terminal 'xterm-256color'
 
 # Remap the Prefix to Ctrl+a
 set -g prefix C-a
