Fix issue with libffi pc path

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,16 +79,6 @@ set-option -g set-titles on
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Smart pane switching with awareness of vim splits
-# See: https://github.com/christoomey/vim-tmux-navigator (got to install this)
-is_vim='echo "#{pane_current_command}" \
-    | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
 # Window Splits (More like vim)
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
@@ -157,7 +147,7 @@ set -g history-limit 10000
 
 # PLUGINS LIST
 
-# Tmux Plugin Manager
+# Copycat
 set -g @copycat_search '/'
 unbind n
 unbind N
@@ -165,17 +155,17 @@ set -g @copycat_next 'n'
 set -g @copycat_prev 'N'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
+# Prefix Highlighter
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_fg 'white'
 set -g @prefix_highlight_bg 'blue'
 
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-command 'tree -C'
-
+# Open Links
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @open 'o'
 set -g @open-editor 'C-o'
 
+# Resurrect sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
@@ -183,14 +173,19 @@ set -g @resurrect-save-bash-history 'off'
 set -g @resurrect-processes 'vi vim nvim emacs man less more tail top irssi \
     mutt ssh psql mysql'
 
+# Session Continuity
 set -g @plugin 'tmux-plugins/tmux-continuum'
-#set -g @continuum-restore 'on'
 set -g @continuum-save-interval '30'
 
+# Solarized Colour Scheme
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @colors-solarized '256'
 
+# Hostname
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
+
+# Vim Navigation
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @plugin 'tmux-plugins/tpm'
 run '~/.dotfiles/modules/tpm/tpm'
