Update haskell configuration

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,27 +1,39 @@
 {
-    "languageserver": {
-      "ccls": {
-        "command": "ccls",
-        "filetypes": ["c", "cpp", "objc", "objcpp"],
-        "rootPatterns": [".ccls", "compile_commands.json", ".git/"],
-        "initializationOptions": {
-           "cache": {
-             "directory": "/tmp/ccls"
-           }
-         }
-      },
-      "haskell": {
-        "command": "hie-wrapper",
-        "rootPatterns": [".stack.yaml", "cabal.config", "package.yaml"],
-        "filetypes": ["hs", "lhs", "haskell"],
-        "initializationOptions": {}
-      },
-      "metals": {
-          "command": "metals-vim",
-          "rootPatterns": ["build-sbt"],
-          "filetypes": ["scala", "sbt"],
-          "initializationOptions": {}
+  "languageserver": {
+    "ccls": {
+      "command": "ccls",
+      "filetypes": ["c", "cpp", "objc", "objcpp"],
+      "rootPatterns": [".ccls", "compile_commands.json", ".git/"],
+      "initializationOptions": {
+        "cache": {
+          "directory": "/tmp/ccls"
+        }
       }
+    },
+  "haskell": {
+      "command": "hie-wrapper",
+      "rootPatterns": [
+        "stack.yaml",
+        "cabal.config",
+        "package.yaml"
+      ],
+      "filetypes": [
+        "hs",
+        "lhs",
+        "haskell"
+      ],
+      "initializationOptions": {
+        "languageServerHaskell": {
+          "hlintOn": true
+        }
+      }
+    },
+  "metals": {
+      "command": "metals-vim",
+      "rootPatterns": ["build-sbt"],
+      "filetypes": ["scala", "sbt"],
+      "initializationOptions": {}
     }
+  }
 }
 
