Update nvim and tmux configs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,6 +41,7 @@ bind -n C-k clear-history
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 set-option -g renumber-windows on
+bind-key T swap-window -t 1
 
 # Status Line
 set -g status on
