Fix some configuration bugs on Arch

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@
 
 # Set Terminal
 set-option -g default-terminal 'screen-256color'
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # Remap the Prefix to Ctrl+a
 set -g prefix C-a
