Improve the configuration to work on WSL

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,8 @@
 {
+  "diagnostic.errorSign": "❯",
+  "diagnostic.warningSign": "❯",
+  "diagnostic.infoSign": "❯",
+  "diagnostic.hintSign": "❯",
   "languageserver": {
     "ccls": {
       "command": "ccls",
