--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@
 
 # Set Terminal
 set-option -g default-terminal 'screen-256color'
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 # Remap the Prefix to Ctrl+a
 set -g prefix C-a
@@ -34,8 +34,6 @@ bind-key -T copy-mode-vi 'V' send -X rectangle-toggle
 if-shell "uname | grep -q Darwin" "source-file ~/.dotfiles/tmux/macos.conf" "source-file ~/.dotfiles/tmux/linux.conf"
 
 # Window Navigation
-bind-key -n C-Pagedown next-window
-bind-key -n C-Pageup previous-window
 bind -n C-k clear-history
 
 # Easy Window Moving (Sequential Reshuffle)
@@ -48,7 +46,7 @@ bind-key T swap-window -t 1
 set -g status on
 set -g status-interval 1
 set -g status-fg colour231
-set -g status-bg colour234
+set -g status-bg colour235
 set -g status-left-length 20
 set -g status-left '#{?client_prefix,#[fg=colour254]#[bg=colour31]#[bold],\
 #[fg=colour16]#[bg=colour254]#[bold]} #S #{?client_prefix,#[fg=colour31]\
@@ -60,7 +58,6 @@ set -g window-status-format "#[fg=colour244,bg=colour235] #I \
 set -g window-status-current-format "#[fg=colour235,bg=colour31]\
 #[fg=white,bg=colour31] #I  #[fg=colour231,bold]#W \
 #[fg=colour31,bg=colour235,nobold]"
-set -g window-status-last-style fg=colour31
 
 # Mouse Control
 set -g mouse off
@@ -94,9 +91,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Fast Pane Cycling (C-a, C-a cycles panes)
-unbind ^A
-bind ^A select-pane -t :.+
+# Fast Window Navigation
+bind-key w list-windows
+bind-key p list-panes
 
 # Pane Resizing
 bind-key J resize-pane -D 5
@@ -108,7 +105,7 @@ bind-key M-k resize-pane -U
 bind-key M-h resize-pane -L
 bind-key M-l resize-pane -R
 
-# Reload Binding (can instantaneously reload tmux's configuration)
+# Reload Binding
 unbind r
 bind r source-file ~/.tmux.conf \; display-message "Configuration Reloaded..."
 
