--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -50,6 +50,7 @@
     "python.analysis.typeCheckingMode": "strict",
     "python.linting.pylintEnabled": true,
     "python.linting.pylintPath": "~/.pyenv/shims/pylint",
+    "python.linting.pylintUseMinimalCheckers": false,
     "python.formatting.provider": "black",
     "python.formatting.blackPath": "~/.pyenv/shims/black",
     "pyright.trace.server": "verbose",
