Fix nvim configuration

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,11 @@
 {
     // CoC Itself
     "suggest.noselect": false,
+    "workspace.workspaceFolderCheckCwd": true,
+    "coc.preferences.rootPatterns": [
+        ".projections.json",
+        ".git"
+    ],
     "diagnostic.errorSign": "❯",
     "diagnostic.warningSign": "❯",
     "diagnostic.infoSign": "❯",
