Update things to work with the M1

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,7 +51,7 @@ set -g status-left-length 20
 set -g status-left '#{?client_prefix,#[fg=colour254]#[bg=colour31]#[bold],\
 #[fg=colour16]#[bg=colour254]#[bold]} #S #{?client_prefix,#[fg=colour31]\
 #[bg=colour235]#[nobold],#[fg=colour254]#[bg=colour235]#[nobold]}'
-set -g status-right '#(eval cut -c3- ~/.tmux.conf | sh -s status_right) #U@#H '
+set -g status-right '#(eval cut -c3- ~/.tmux.conf | sh -s status_right) #(eval whoami)@#H '
 set -g status-right-length 150
 set -g window-status-format "#[fg=colour244,bg=colour235] #I \
 #[fg=colour31,bg=colour235] #[fg=colour31,bg=colour235]#W "
