--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -4,8 +4,11 @@
     "workspace.workspaceFolderCheckCwd": true,
     "coc.preferences.rootPatterns": [
         ".projections.json",
-        ".git"
+        ".git",
+        "package.json"
     ],
+    "coc.preferences.formatOnSaveFiletypes": ["css", "typescript", "javascript"],
+    "prettier.formatterPriority": 1,
     "diagnostic.errorSign": "❯",
     "diagnostic.warningSign": "❯",
     "diagnostic.infoSign": "❯",
